[tool.poetry]
name = "piyolog"
version = "0.1.0"
description = ""
authors = ["fujitako03 <thisis.snsd03@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pytest-cov = "^3.0.0"
pandas = "^1.4.2"
python-dateutil = "^2.8.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
